Fix on db.js domElements and readability on gameEngine

--- a/game.css
+++ b/game.css
@@ -235,7 +235,7 @@ body {
 }
 
 #redNexusTurret1 {
-    margin-left:690px;
+    margin-left:735px;
     margin-top: 80px;
 }
 
@@ -285,7 +285,7 @@ body {
 }
 
 #redNexusTurret2 {
-    margin-left:720px;
+    margin-left:755px;
     margin-top: 110px;
 }
 
